[package]
name = "reverse-proxy-reveal"
version = "2.0.0"
edition = "2021"
authors = ["Octolus from OctoVPN team"]
description = "Production-ready, ultra-fast reverse proxy backend IP scanner"
repository = "https://github.com/Octolus/OctoIntel"
license = "MIT"
keywords = ["scanner", "ip", "reverse-proxy", "cdn", "security"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "reverse-proxy-reveal"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
ipnetwork = "0.20"
colored = "2.1"
futures = "0.3"
crossbeam = "0.8"
sysinfo = "0.33"
regex = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

